--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,32 @@
+/*************** Global Changes ************/
+
+body { background-color: #353535; font-weight: 400; }
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 100;
+    text-transform: uppercase;
+    color: #2E6CAB;
+}
+
+a:hover { text-decoration: none; }
+
+.btn-primary { background-color: #063968; border-color: transparent; }
+
+.text-primary { color: #063968; }
+
+a.text-primary:hover,
+a.text-primary:focus { color: #052746; }
+
+.section p { margin-top: 30px; }
+
+.content-section-b { background-color: #ffffff; }
+
+
 /****************************** Navbar *****************************/
+
+.mini-header { background-color: #353535; color: #bbb; }
+
+.mini-header .contact-info { margin: 2px auto; }
 
 .navbar-brand .logo {
     /*width: 100%;*/
@@ -8,15 +36,124 @@
     margin-top: -11px;
 }
 
-.intro-header {
-/*    padding-top: 50px;  If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! 
-    padding-bottom: 50px;
-    text-align: center; */
-    color: #083868;
-    background: url(../img/bg.jpg) no-repeat center center;
-    /*background-size: cover;*/
+.nav li a {
+    text-transform: uppercase;
+    font-size: 16px;
 }
 
 .navbar .topnav { padding: 10px; }
 
 .navbar-default { background-color: #ffffff; }
+
+/******************** Hero *********************/
+
+.intro-header {
+/*    padding-top: 50px;  If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! 
+    padding-bottom: 50px;
+    text-align: center; */
+    background: #353535 url(../img/bg.jpg) no-repeat center center;
+    /*background-size: cover;*/
+    /*opacity: 0.5;*/
+    background-attachment: fixed;
+}
+
+
+.intro-message h1 { font-size: 55px; color: #ffffff;}
+.intro-message h3 { color: #ffffff; }
+
+.big-arrow {
+    font-size: 260px!important;
+    color: #666666;
+    margin-top: -30px;
+    /*display: block!important;*/
+}
+
+.big-arrow:hover { color: #777; }
+
+
+/*** Products **/
+
+.panel-body { padding: 25px; }
+
+.panel-body h3 { margin-top: 0px; margin-bottom: 19px; }
+
+.panel-heading { padding: 0; }
+
+/******************** Footer *********************/
+
+.banner h2 { color: #ffffff; }
+
+.section-heading-spacer { float: none; }
+
+/******************** Footer *********************/
+
+.primary-info { margin-top: 45px; }
+
+.info-divider { margin: 0 10px; }
+
+
+
+/******************** Responsive *********************/
+
+
+
+/*==========  Mobile First Method  ==========*/
+
+/* Custom, iPhone Retina */ 
+@media only screen and (min-width : 320px) {
+    
+}
+
+/* Extra Small Devices, Phones */ 
+@media only screen and (min-width : 480px) {
+
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) {
+
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) {
+    
+    .intro-message {
+        padding-top: 18%;
+        padding-bottom: 0%;
+    }
+
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width : 1200px) {
+
+}
+
+
+
+/*==========  Non-Mobile First Method  ==========*/
+
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 1200px) {
+
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 992px) {
+
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+
+}
+
+/* Extra Small Devices, Phones */ 
+@media only screen and (max-width : 480px) {
+
+}
+
+/* Custom, iPhone Retina */ 
+@media only screen and (max-width : 320px) {
+    
+}
